[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["minecrosters"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
supertokens-python = "^0.8.1"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
