[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["minecrosters"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
supertokens-python = "^0.9.1"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
