[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["BeeMoe5 on github"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.1"
pylint = "^2.15.9"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
